[design] prepare for use idea.