@@ -19,42 +19,6 @@ dependencies {
     implementation 'com.google.protobuf:protobuf-java:3.9.1'
 }
 
-compileJava {
-    options.compilerArgs.add('--add-exports')
-    options.compilerArgs.add('jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED')
-    options.compilerArgs.add('--add-exports')
-    options.compilerArgs.add('jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED')
-    options.compilerArgs.add('--add-exports')
-    options.compilerArgs.add('jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED')
-    options.compilerArgs.add('--add-exports')
-    options.compilerArgs.add('jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED')
-    options.compilerArgs.add('--add-exports')
-    options.compilerArgs.add('jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED')
-    options.compilerArgs.add('--add-exports')
-    options.compilerArgs.add('jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED')
-    options.compilerArgs.add('--add-exports')
-    options.compilerArgs.add('jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED')
-}
-
-compileTestJava {
-    options.compilerArgs.add('--add-exports')
-    options.compilerArgs.add('jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED')
-    options.compilerArgs.add('--add-exports')
-    options.compilerArgs.add('jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED')
-    options.compilerArgs.add('--add-exports')
-    options.compilerArgs.add('jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED')
-    options.compilerArgs.add('--add-exports')
-    options.compilerArgs.add('jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED')
-    options.compilerArgs.add('--add-exports')
-    options.compilerArgs.add('jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED')
-    options.compilerArgs.add('--add-exports')
-    options.compilerArgs.add('jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED')
-    options.compilerArgs.add('--add-exports')
-    options.compilerArgs.add('jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED')
-    options.compilerArgs.add('--add-exports')
-    options.compilerArgs.add('jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED')
-}
-
 tasks.jar {
     archiveFileName.set("appbox-design.jar")
 }
